force-app/main/default/objects/RC_student__c/RC_student__c.object-meta.xml
<CustomObject>
    <label>RC_student</label>
    <nameField>
        <label>RC_student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RC_students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>