force-app/main/default/objects/RC_student__c/fields/student_address__c.field-meta.xml
<CustomField>
    <fullName>student_address__c</fullName>
    <label>student_address</label>
    <type>TextArea</type>
</CustomField>