force-app/main/default/objects/RC_student__c/fields/student_address_pincode__c.field-meta.xml
<CustomField>
    <fullName>student_address_pincode__c</fullName>
    <label>student_address_pincode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>