force-app/main/default/objects/RC_student__c/fields/student_address_state__c.field-meta.xml
<CustomField>
    <fullName>student_address_state__c</fullName>
    <label>student_address_state</label>
    <length>50</length>
    <type>Text</type>
</CustomField>