force-app/main/default/objects/RC_student__c/fields/student_name__c.field-meta.xml
<CustomField>
    <fullName>student_name__c</fullName>
    <label>student_name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>