force-app/main/default/objects/RC_student__c/fields/student_password__c.field-meta.xml
<CustomField>
    <fullName>student_password__c</fullName>
    <label>student_password</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>