force-app/main/default/objects/RC_student__c/fields/student_phone__c.field-meta.xml
<CustomField>
    <fullName>student_phone__c</fullName>
    <inlineHelpText>Please add Phone/Mobile Number</inlineHelpText>
    <label>student_phone</label>
    <type>Phone</type>
</CustomField>