force-app/main/default/objects/RC_student__c/fields/student_school_marks__c.field-meta.xml
<CustomField>
    <fullName>student_school_marks__c</fullName>
    <label>student_school_marks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>