force-app/main/default/objects/RC_student__c/fields/student_school_name__c.field-meta.xml
<CustomField>
    <fullName>student_school_name__c</fullName>
    <label>student_school_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>